# internal/router/feed.go
@@ -13,5 +13,7 @@ func InitFeedRouter(
 	strictAuthRouter := r.Group("/").Use(middleware.StrictAuth(deps.JWT, deps.Logger))
 	{
 		strictAuthRouter.POST("/feeds", deps.FeedHandler.CreateFeed)
+		strictAuthRouter.POST("/feeds/refresh", deps.FeedHandler.RefreshFeeds)
+		strictAuthRouter.POST("/feeds/:id/refresh", deps.FeedHandler.RefreshFeed)
 	}
 }
